# cef-project

./: .gitignore  .style.cfg  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
bazel/: external_local_repository.bzl
bazel/cef/: loader.bzl  platform.bzl.in  version.bzl  version.bzl.in
cmake/: DownloadCEF.cmake
examples/: CMakeLists.txt  README.md
examples/message_router/: BUILD.bazel  CMakeLists.txt  README.md  app_browser_impl.cc  app_renderer_impl.cc  client_impl.cc  client_impl.h  resource.h  resource_util_win_impl.cc
examples/message_router/linux/: BUILD.bazel
examples/message_router/mac/: BUILD.bazel
examples/message_router/resources/: message_router.html
examples/message_router/resources/win/: resource.rc
examples/message_router/win/: BUILD.bazel  resource.rc
examples/minimal/: BUILD.bazel  CMakeLists.txt  README.md  app_browser_minimal.cc  app_other_minimal.cc  app_renderer_minimal.cc  client_minimal.cc  client_minimal.h  main_minimal.cc  process_helper_mac_minimal.cc  resource.h  resource_util_win_impl.cc
examples/minimal/linux/: BUILD.bazel
examples/minimal/mac/: BUILD.bazel
examples/minimal/win/: BUILD.bazel  resource.rc
examples/resource_manager/: BUILD.bazel  CMakeLists.txt  README.md  app_browser_impl.cc  client_impl.cc  client_impl.h  resource.h  resource_util_win_impl.cc
examples/resource_manager/linux/: BUILD.bazel
examples/resource_manager/mac/: BUILD.bazel
examples/resource_manager/resources/: resource_manager.html
examples/resource_manager/resources/win/: resource.rc
examples/resource_manager/win/: BUILD.bazel  resource.rc
examples/scheme_handler/: BUILD.bazel  CMakeLists.txt  README.md  app_browser_impl.cc  app_subprocess_impl.cc  resource_util_win_impl.cc  scheme_handler_impl.cc  scheme_handler_impl.h  scheme_strings.cc  scheme_strings.h
examples/scheme_handler/linux/: BUILD.bazel
examples/scheme_handler/mac/: BUILD.bazel
examples/scheme_handler/resources/: scheme_handler.html
examples/scheme_handler/resources/win/: resource.h  resource.rc
examples/scheme_handler/win/: BUILD.bazel  resource.rc
examples/shared/: BUILD.bazel  CMakeLists.txt  README.md  app_factory.h  browser_util.cc  browser_util.h  client_manager.cc  client_manager.h  client_util.cc  client_util.h  client_util_linux.cc  client_util_mac.mm  client_util_win.cc  main.h  main_linux.cc  main_mac.mm  main_util.cc  main_util.h  main_win.cc  process_helper_mac.cc  process_helper_mac.h  resource_util.cc  resource_util.h  resource_util_linux.cc  resource_util_mac.mm  resource_util_posix.cc  resource_util_win.cc
examples/shared/mac/: Info.plist.in  helper-Info.plist.in
examples/shared/resources/mac/: Info.plist  helper-Info.plist
examples/shared/win/: shared.rc
tools/: file_util.py  fix_style.py  git_util.py
tools/bazel/: bazel_util.py  platform_updater.py  version_updater.py
